deploy/kubernetes/backend/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  selector:
  matchLabels:
    app: backend-deployment
  template:
  metadata:
    labels:
      app: backend-deployment
  spec:
    containers:
    - name: backend-deployment 
      image: foo/bar:latest
      ports:
      - name: http
        containerPort: 9696 
        protocol: TCP
