deploy/kubernetes/backend/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  ports:
  - name: http
    port: 80 
  selector:
  app: backend-deployment
